--- a/index.html
+++ b/index.html
@@ -1,12 +1,123 @@
-<html>
-  <head>
-    <title>Aiches 페이지</title>
-  </head>
-  <body>
-    <h1>안녕하세요, Aiches의 개인 페이지입니다.</h1>
-    <hr>
-    <h3>자기 소개</h3>
-    <p>저는 1학년 융합소프트웨어학부에 재학 중인 Aiches입니다. 개발에 대한 관심을 가지고 있습니다.</p>
-    
-  </body>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aiches의 자기소개 페이지</title>
+  <style>
+    body {
+      font-family: "Noto Sans KR", sans-serif;
+      background-color: #f5f7fa;
+      color: #333;
+      margin: 0;
+      padding: 0;  
+    }
+
+    header {
+      background-color: #4a90e2;
+      color: white;
+      text-align: center;
+      padding: 40px 0;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+
+    header p {
+      font-size: 1.1em;
+      margin-top: 10px;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    section {
+      margin-bottom: 40px;
+    }
+
+    h2 {
+      border-left: 5px solid #4a90e2;
+      padding-left: 10px;
+      color: #4a90e2;
+    }
+
+    p {
+      line-height: 1.6;
+    }
+
+    ul {
+      list-style-type: square;
+      padding-left: 20px;
+    }
+
+    footer {
+      text-align: center;
+      background-color: #f0f0f0;
+      padding: 20px 0;
+      color: #666;
+      font-size: 0.9em;
+    }
+
+    a {
+      color: #4a90e2;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Aiches</h1>
+    <p>융합소프트웨어학부 1학년 | C, C++, Python 등 학습 중</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>💡 자기소개</h2>
+      <p>
+        안녕하세요. 저는 <strong>Aiches</strong>입니다. 현재 융합소프트웨어학부 1학년에 재학 중이며,
+        프로그래밍과 문제 해결에 큰 흥미를 가지고 있습니다.<br>
+        지금 당장은 1학년이기에 할 수 있는 것이 많지는 않지만 다양하게 배워나가고 있습니다.
+      </p>
+    </section>
+
+    <section>
+      <h2>🧠 배우고 있는 기술</h2>
+      <ul>
+        <li><strong>Python</strong> — 기초 문법, 자료형, 조건문, 반복문, 간단한 프로젝트</li>
+        <li><strong>C++</strong> — 기본 문법, 입출력, 배열, 포인터, 간단한 알고리즘 문제 풀이</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>🎯 앞으로의 목표</h2>
+      <p>
+        앞으로는 웹 개발과 인공지능 분야에도 도전해보고 싶습니다.<br>
+        단순히 코드만 짜는 개발자가 아니라, 내가 무엇을 구현하고 있는지를 이해하고며,<br> 
+        사용자가 필요로 하는 것을 이해하고, 직접 구현할 수 있는 개발자로 성장하는 것이 목표입니다.
+      </p>
+    </section>
+
+    <section>
+      <h2>📫 연락하기</h2>
+      <p>이메일: <a href="mailto:aiches@example.com">hs302301hs@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/aiches" target="_blank">(추가 예정)</a></p>
+    </section>
+  </main>
+
+  <footer>
+    © 2025 Aiches. All rights reserved.
+  </footer>
+</body>
 </html>
