--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
     </section>
 
     <section>
-      <h2>📫 연락하기</h2>
+      <h2>연락하기</h2>
       <p>이메일: <a href="mailto:hs302301hs@gmail.com">hs302301hs@gmail.com</a></p>
-      <p>GitHub: <a>추가 예정</a></p>
     </section>
   </main>
 
